# marketingnotes-oss

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build-css.sh  docker-compose.yml  dockerhub-readme.md  env.example  manage.py  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js
.github/workflows/: docker-build.yml
app/: admin.py  agent.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_suggestedmessage.py  0003_apikey.py  0004_auto_20250719_1034.py
marketingnotes_oss/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: generate-secret.py
static/: output.css
templates/: api_keys.html  base.html
templates/chat/: chat_detail.html
