[project]
name = "marketingnotes-oss"
version = "0.1.0"
description = ""
authors = [
    {name = "cyber-michele",email = "mik.le@live.it"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "langchain-anthropic (>=0.3.17,<0.4.0)",
    "langchain-core (>=0.3.69,<0.4.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "marketingnotes_oss", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
